@@ -73,7 +73,7 @@
              <x>0</x>
              <y>0</y>
              <width>776</width>
-             <height>503</height>
+             <height>500</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_54">
@@ -419,8 +419,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>766</width>
-                <height>493</height>
+                <width>433</width>
+                <height>414</height>
                </rect>
               </property>
               <layout class="QHBoxLayout" name="horizontalLayout_25">
@@ -781,8 +781,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>761</width>
-             <height>543</height>
+             <width>818</width>
+             <height>554</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_55">
@@ -1834,8 +1834,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>776</width>
-             <height>503</height>
+             <width>789</width>
+             <height>374</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_56">
@@ -2444,8 +2444,8 @@
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>233</width>
-                     <height>1393</height>
+                     <width>280</width>
+                     <height>1425</height>
                     </rect>
                    </property>
                    <layout class="QVBoxLayout" name="verticalLayout_38">
@@ -2905,8 +2905,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>788</width>
-             <height>531</height>
+             <width>884</width>
+             <height>551</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_61">
@@ -3932,7 +3932,7 @@
              <x>0</x>
              <y>0</y>
              <width>776</width>
-             <height>503</height>
+             <height>500</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -3986,7 +3986,7 @@
                  <x>0</x>
                  <y>0</y>
                  <width>751</width>
-                 <height>558</height>
+                 <height>618</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_65">
@@ -4806,8 +4806,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>761</width>
-             <height>1015</height>
+             <width>769</width>
+             <height>1039</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_35">
@@ -5944,7 +5944,7 @@
              <x>0</x>
              <y>0</y>
              <width>761</width>
-             <height>511</height>
+             <height>519</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_43">
@@ -6599,7 +6599,7 @@
                   <item>
                    <widget class="QDoubleSpinBox" name="sb_read_interval">
                     <property name="suffix">
-                     <string> ms</string>
+                     <string> seconds</string>
                     </property>
                     <property name="decimals">
                      <number>3</number>
@@ -6608,10 +6608,10 @@
                      <double>0.100000000000000</double>
                     </property>
                     <property name="maximum">
-                     <double>60000.000000000000000</double>
+                     <double>60.000000000000000</double>
                     </property>
                     <property name="value">
-                     <double>1500.000000000000000</double>
+                     <double>1.500000000000000</double>
                     </property>
                    </widget>
                   </item>
@@ -6968,8 +6968,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>776</width>
-             <height>503</height>
+             <width>635</width>
+             <height>450</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_58">
@@ -7503,8 +7503,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>776</width>
-             <height>503</height>
+             <width>305</width>
+             <height>151</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_59">
@@ -7725,7 +7725,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>23</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
